src/objects/Toolkit_Search_Dropdown_Order__mdt.object
<CustomObject>
    <description>The order in which the dropdowns should appear for Toolkit Search.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>The sort order in which the Product Category dropdown should appear on the Toolkit Search page.</description>
        <label>Category</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>The sort order in which the Product Class dropdown should appear on the Toolkit Search page.</description>
        <label>Class</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <description>The sort order in which the Product Offering dropdown should appear on the Toolkit Search page.</description>
        <label>Offering</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Web_Resource__c</fullName>
        <description>The sort order in which the Primary Web Resource dropdown should appear on the Toolkit Search page.</description>
        <label>Primary Web Resource</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Web_Resource__c</fullName>
        <description>The sort order in which the Related Web Resource dropdown should appear on the Toolkit Search page.</description>
        <label>Related Web Resource</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>The sort order in which the Product (Solution) dropdown should appear on the Toolkit Search page.</description>
        <label>Solution</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Toolkit Search Dropdown Order</label>
    <pluralLabel>Toolkit Search Dropdown Order</pluralLabel>
</CustomObject>